# serial-tool

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
