[package]
name = "serial-tool"
version = "1.0.0"
description = "A Serial Port Debug Tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.3"
tokio = { version = "1.0", features = ["full"] }
tokio-serial = "5.4"
bytes = "1.0"
futures-util = "0.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
